insert working, scan with transform no cost yet