@@ -16,18 +16,20 @@
 
 package org.polypheny.db.algebra.rules;
 
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import org.polypheny.db.algebra.AlgNode;
 import org.polypheny.db.algebra.core.AlgFactories;
 import org.polypheny.db.algebra.logical.LogicalModifyCollect;
 import org.polypheny.db.algebra.logical.LogicalTransformer;
 import org.polypheny.db.algebra.logical.graph.LogicalGraphModify;
-import org.polypheny.db.algebra.logical.graph.LogicalGraphPattern;
 import org.polypheny.db.algebra.logical.graph.LogicalGraphScan;
+import org.polypheny.db.algebra.logical.graph.LogicalGraphValues;
 import org.polypheny.db.plan.AlgOptRule;
 import org.polypheny.db.plan.AlgOptRuleCall;
 import org.polypheny.db.plan.AlgOptRuleOperand;
-import org.polypheny.db.plan.Convention;
+import org.polypheny.db.plan.AlgOptTable;
 
 public class GraphToRelRule extends AlgOptRule {
 
@@ -36,13 +38,13 @@ public class GraphToRelRule extends AlgOptRule {
     public static final GraphToRelRule GRAPH_MODIFY_TO_REL =
             new GraphToRelRule(
                     true,
-                    operand( LogicalGraphModify.class, operand( LogicalGraphPattern.class, none() ) ),
+                    operand( LogicalGraphModify.class, operand( LogicalGraphValues.class, none() ) ),
                     "GRAPH_MODIFY_TO_REL" );
 
     public static final GraphToRelRule GRAPH_SCAN_TO_REL =
             new GraphToRelRule(
                     false,
-                    operand( LogicalGraphScan.class, operandJ( LogicalGraphPattern.class, Convention.NONE, r -> true, any() ) ),
+                    operand( LogicalGraphScan.class, none() ),
                     "GRAPH_SCAN_TO_REL" );
 
 
@@ -68,11 +70,11 @@ public class GraphToRelRule extends AlgOptRule {
 
     private AlgNode getRelModify( AlgOptRuleCall call ) {
         LogicalGraphModify modify = call.alg( 0 );
-        LogicalGraphPattern values = call.alg( 1 );
+        LogicalGraphValues values = call.alg( 1 );
 
-        List<AlgNode> transformedValues = values.getRelationalEquivalent( List.of() );
+        List<AlgNode> transformedValues = values.getRelationalEquivalent( List.of(), Arrays.asList( modify.getNodeTable(), modify.getEdgeTable() ) );
 
-        List<AlgNode> transformedModifies = modify.getRelationalEquivalent( transformedValues );
+        List<AlgNode> transformedModifies = modify.getRelationalEquivalent( transformedValues, List.of() );
 
         if ( transformedModifies.size() == 1 ) {
             return transformedModifies.get( 0 );
@@ -85,9 +87,15 @@ public class GraphToRelRule extends AlgOptRule {
     private AlgNode getRelScan( AlgOptRuleCall call ) {
         LogicalGraphScan scan = call.alg( 0 );
 
-        List<AlgNode> transformedScans = scan.getRelationalEquivalent( List.of() );
+        List<AlgOptTable> tables = new ArrayList<>();
+        tables.add( scan.getNodeTable() );
+        if ( scan.getEdgeTable() != null ) {
+            tables.add( scan.getEdgeTable() );
+        }
 
-        return LogicalTransformer.create( transformedScans, scan.getTraitSet() );
+        List<AlgNode> transformedScans = scan.getRelationalEquivalent( List.of(), tables );
+
+        return LogicalTransformer.create( transformedScans, transformedScans.get( 0 ).getTraitSet(), scan.getTraitSet(), scan.getRowType() );
     }
 
 }
